TINY-12388: Prevent cards being cut off at the bottom of the sidebar

--- a/modules/oxide/src/less/theme/components/suggestededits/suggestededits.less
+++ b/modules/oxide/src/less/theme/components/suggestededits/suggestededits.less
@@ -138,7 +138,7 @@
         flex-direction: column;
         gap: 12px;
         overflow: auto;
-        padding: 0px 12px;
+        padding: 0px 12px 12px 12px;
         position: relative;
 
         .tox-suggestededits__card {
